[package]
name = "bonfida"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "bonfida"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
error-chain = { version = "0.12.4", default-features = false }
url = "2.2.2"
tungstenite = "0.14.0"
void = "1.0.2"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
env_logger = "0.9.0"
serde_json = "1.0"